package eng1.group9.EndScreen;

import eng1.group9.ScreenInput;

class EndScreenInput extends ScreenInput {
    @Override
    public void Update() {

    }
}
