package eng1.group9;

/**
 * Base class for updating the UI
 */
public abstract class ScreenUI {

    /**
     * Update the UI
     */
    public abstract void update();

    public abstract void resize(int width, int height);
}
